--- a/instance.template
+++ b/instance.template
@@ -1,10 +1,8 @@
 {
-   "AWSTemplateFormatVersion" : "2010-09-09",
-   "Description" : "Ec2 Instance Launch",
-
-
+  "AWSTemplateFormatVersion" : "2010-09-09",
+  "Description" : "Ec2 Instance Launch",
+  
   "Parameters" : {
-
     "InstanceType" : {
       "Description" : "EC2 instance type",
       "Type" : "String",
@@ -12,39 +10,56 @@
       "AllowedValues" : [ "t1.micro", "t2.micro", "t2.small", "t2.medium", "m1.small", "m1.medium", "m1.large", "m1.xlarge"],
       "ConstraintDescription" : "must be a valid EC2 instance type."
     },
-
     "KeyName": {
       "Description" : "Name of an existing EC2 KeyPair to enable SSH access to the instance",
       "Type": "AWS::EC2::KeyPair::KeyName",
       "ConstraintDescription" : "must be the name of an existing EC2 KeyPair."
     },
-
     "Subnet": {
       "Description" : "Subnet ID",
       "Type" : "String",
       "Default" : "subnet-18529733",
       "ConstraintDescription" : "must be the id of an existing Subnet."
     },
-   
     "SecurityGroupID": {
       "Description" : "SecurityGroup IDs",
       "Type" : "String",
       "Default" : "sg-e700f183",
       "ConstraintDescription" : "must be the id of an existing SG."
+    },
+    "PrivateIP": {
+      "Description" : "DevPrivateIPs",
+      "Type" : "String",
+      "Default" : "172.16.16.16",
+      "ConstraintDescription" : "must be a valid private IP in the subnet"
     }
   },
-
-   "Resources" : {
-      "MyEC2Instance" : {
+  
+  "Resources" : {
+     "MyEC2Instance" : {
          "Type" : "AWS::EC2::Instance",
          "Properties" : {
             "ImageId" : "ami-10761778",
             "SubnetId" : { "Ref" : "Subnet" },
             "InstanceType" : { "Ref" : "InstanceType" },
             "SecurityGroupIds" : [ { "Ref" : "SecurityGroupID" } ],
-            "KeyName" : { "Ref" : "KeyName" }
+            "PrivateIpAddress" : { "Ref" : "PrivateIP" },
+            "KeyName" : { "Ref" : "KeyName" },
+            "UserData": {
+              "Fn::Base64": {
+                "Fn::Join": [
+                  "\n",
+                  [
+                  "echo \"[main]\" >> /etc/puppet/puppet.conf",
+                  "echo \"server = ip-172-31-27-232.ec2.internal\" >> /etc/puppet/puppet.conf",
+                  "echo \"environment = development\" >> /etc/puppet/puppet.conf"
+                  ]
+                ]            
+              }
+            }
          }
-      }
-   }
+     }
+  }
+
 }
 
