--- a/instance.template
+++ b/instance.template
@@ -6,9 +6,9 @@
     "InstanceType" : {
       "Description" : "EC2 instance type",
       "Type" : "String",
-      "Default" : "m1.large",
+      "Default" : "m1.medium",
       "AllowedValues" : [ "t1.micro", "t2.micro", "t2.small", "t2.medium", "m1.small", "m1.medium", "m1.large", "m1.xlarge"],
-      "ConstraintDescription" : "must be a valid EC2 instance type."
+      "ConstraintDescription" : "enter must be a valid EC2 instance type."
     },
     "KeyName": {
       "Description" : "Name of an existing EC2 KeyPair to enable SSH access to the instance",
@@ -25,19 +25,19 @@
     "SecurityGroupID": {
       "Description" : "SecurityGroup IDs",
       "Type" : "String",
-      "Default" : "sg-bf22d6c4",
+      "Default" : "sg-88ec1df3",
       "ConstraintDescription" : "must be the id of an existing SG."
     },
     "PrivateIP": {
       "Description" : "DevPrivateIPs",
       "Type" : "String",
-      "Default" : "72.31.26.231",
+      "Default" : "172.31.17.178",
       "ConstraintDescription" : "must be a valid private IP in the subnet"
     },
     "PuppetMaster": {
       "Description" : "Puppet Master",
       "Type" : "String",
-      "Default" : "ip-172-31-26-235.us-west-2.compute.internal",
+      "Default" : "ip-172-31-17-168.us-west-2.compute.internal",
       "ConstraintDescription" : "must be a valid DNS of puppet server"
     }
   },
