--- a/instance.template
+++ b/instance.template
@@ -9,7 +9,7 @@
       "Type" : "String",
       "Default" : "m1.large",
       "AllowedValues" : [ "t1.micro", "t2.micro", "t2.small", "t2.medium", "m1.small", "m1.medium", "m1.large", "m1.xlarge"],
-      "ConstraintDescription" : "must be a valid EC2 instance type."
+      "ConstraintDescription" : "enter must be a valid EC2 instance type."
     },
     "KeyName": {
       "Description" : "Name of an existing EC2 KeyPair to enable SSH access to the instance",
