--- a/instance.template
+++ b/instance.template
@@ -1,4 +1,3 @@
-
 {
   "AWSTemplateFormatVersion" : "2010-09-09",
   "Description" : "Ec2 Instance Launch ",
@@ -7,7 +6,7 @@
     "InstanceType" : {
       "Description" : "EC2 instance type",
       "Type" : "String",
-      "Default" : "m1.medium",
+      "Default" : "t2.micro",
       "AllowedValues" : [ "t1.micro", "t2.micro", "t2.small", "t2.medium", "m1.small", "m1.medium", "m1.large", "m1.xlarge"],
       "ConstraintDescription" : "enter must be a valid EC2 instance type."
     },
@@ -76,7 +75,8 @@
                 "Fn::Join": [
                   "\n",
                   [
-                  "#!/bin/bash",
+                    "#!/bin/bash",
+                  "yum install puppet -y",
                   "echo \"[main]\" >> /etc/puppet/puppet.conf",
                   {
                     "Fn::Join": [
